--- a/template/template.html
+++ b/template/template.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="style.css" rel="stylesheet" id="css">
+        <!-- Our custom stylesheet -->
+        <link href="../stylesheets/style.css" rel="stylesheet" id="css">
+        
+        <!-- Bootstrap Imports -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        
+        <!-- Import on page load scripts -->
+        <script src="../scripts/loadscripts.js"></script>
+    
+        <!-- Import Firebase Scripts -->
+        <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
+        <script src="../scripts/firebasescripts.js"></script>
+    
+        <!-- Import the messager scripts -->
+        <script src="../scripts/messages.js"></script>
     </head>
     
     <body>
+        <div include-html="../navbar.html"></div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <!--Hamburger-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,4 +34,9 @@
             <input type="image" src="assets/profile.png" alt="Profile">
         </nav>
     </body>
+    <footer>
+        <script>
+            includeHTML();
+        </script>
+    </footer>
 </html>
