--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
     <h1>DMs</h1>
         <div id = "dms" class = "element">
         </div>
@@ -7,3 +9,5 @@
     <h1>Global</h1>
         <div id = "global" class = "element">
         </div>
+    
+</html>
