--- a/template/template.html
+++ b/template/template.html
@@ -20,7 +20,7 @@
     </head>
     
     <body>
-        <div include-html="../templates/sidebar.html"></div>
+        <div include-html="../template/sidebar.html"></div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <!--Hamburger-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
