Work on template/sidebar

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <h1>DMs</h1>
-        <div id = "dms" class = "element">
+    <head>
+        <link href="../stylesheets/style.css" rel="stylesheet" id="css">
+        <link href="../stylesheets/sidebar.css" rel="stylesheet" id="css">
+    </head>
+
+    <body>
+        <div id = "sidebar">
+        <h1>DMs</h1>
+            <div id = "dms" class = "element">Craig</div>
+            <div id = "dms" class = "element">Andrew</div>
+        <h1>Classes</h1>
+            <div id = "classes" class = "element">Chemistry</div>
+            <div id = "classes" class = "element">Physics</div>
+        <h1>Global</h1>
+            <div id = "global" class = "element">Computer Science</div>
         </div>
-    <h1>Classes</h1>
-        <div id = "classes" class = "element">
-        </div>
-    <h1>Global</h1>
-        <div id = "global" class = "element">
-        </div>
-    
+    </body>
 </html>
