Sidebar aethsetics, cleanup

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,7 +1,16 @@
 body {
     font-family: "Arial";
+    
+    /* No text select */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
+/* Sidebar Styles */
 .sidenav {
   height: 100%;
   width: 0;
@@ -11,21 +20,8 @@ body {
   left: 0;
   background-color: #111;
   overflow-x: hidden;
-  transition: 0.5s;
+  /*transition: 0.5s;*/
   padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
 }
 
 .sidenav .closebtn {
@@ -36,11 +32,30 @@ body {
   margin-left: 50px;
 }
 
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+.sidenav .closebtn:hover {
+    font-weight: 100;
+    filter: brightness(50%);
 }
 
 #sidebar {
     color: white;
+}
+
+.sidenav body {
+    background-color: black;
+    color: white;
+}
+
+.sidenav h1 {
+    font-size: 18pt;
+    padding-left:5%;
+}
+
+.element {
+    padding-left: 15%;
+    color: grey;
+}
+
+.element:hover {
+    color: lightblue;
 }
