--- a/template/template.html
+++ b/template/template.html
@@ -21,7 +21,7 @@
     
     <body>
         <!-- Slide-out nav -->
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar">
             <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
             
             <div id="mySidenav" class="sidenav">
@@ -38,7 +38,7 @@
                     </div>
             </div>            
             <!--Title-->
-            <a class="navbar-brand" href="#">ClassOverflow</a>
+            <h1>ClassOverflow</h1>
 
             <!--Profile-->
             <input type="image" src="assets/profile.png" alt="Profile">
