Circle profile picture placeholder

--- a/template/template.html
+++ b/template/template.html
@@ -41,7 +41,7 @@
             <h1>ClassOverflow</h1>
 
             <!--Profile-->
-            <input type="image" src="assets/profile.png" alt="Profile">
+            <input type="image" src="../images/Profile%20Picture%20Placeholder.jpg" alt="Profile" class = "profilepic">
         </nav>
     </body>
     <footer>
