--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -23,6 +23,13 @@ body {
     font-weight: 50;
 }
 
+.profilepic {
+    border-radius: 50%;
+    margin-right: 7px;
+    height: 50px;
+    width: 50px;
+}
+
 /* Sidebar Styles */
 .sidenav {
   height: 100%;
