--- a/templates/template.html
+++ b/templates/template.html
@@ -19,10 +19,43 @@
     
         <!-- Import the messager scripts -->
         <script src="../scripts/messages.js"></script>
+        
+        <!-- Import navbar scripts -->
+        <script src="../scripts/navbarscripts.js"></script>
     </head>
     
     <body>
-        <div input-html="../templates/navbar.html"></div>
+        <div include-html="../templates/navbar.html"></div>
+        <div id="container" style="width: 100%;">
+            <div include-html="../templates/sidebar.html" id="sidenav" class="sidenav"></div>
+            <div class="content">
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                <p>This is test content.</p>
+                <p>This is more content.</p>
+                
+            </div>
+        </div>
     </body>
     <footer>
         <script>
