Start of Login, Profile, and Account Management
Added the Login page
Added the Account page
Split Firebase Scripts into two files
Updated Firebase scripts to use the newest version (and just what we need)
Added the messages system (scripts, styles, and divs)

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -204,3 +204,27 @@ h7 {
     border-style: solid
 }
 
+.profile-line {
+    overflow: auto;
+    padding-bottom: 10px;
+}
+
+#messages {
+    padding: 0px;
+}
+
+.message {
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+}
+
+.message-good {
+    background: darkseagreen;
+    border-color: darkgreen;
+}
+
+.message-bad {
+    background: lightcoral;
+    border-color: darkred;
+}
