--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -4,5 +4,12 @@
 <h1>Classes</h1>
     <div id = "classes" class = "element">Chemistry</div>
     <div id = "classes" class = "element">Physics</div>
-<h1>Global</h1>
+<h1>Topics</h1>
     <div id = "global" class = "element">Computer Science</div>
+<h1>Account</h1>
+    <div id = "global" class = "element">Account</div>
+    <div id = "global" class = "element">Sign out</div>
+<h1>About</h1>
+    <div id = "global" class = "element">About</div>
+    <div id = "global" class = "element">Privacy Policy</div>
+    <div id = "global" class = "element">Terms of Service</div>
