Content Tag is Changed

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -195,7 +195,7 @@ h7 {
     margin-bottom: 1rem;
 }
 
-.content{
+.contentBackground{
     background-color: #FCFCFC;
     border-color: #DCECEF;
     /*border-color: radial-gradient(#DCECEF, #EDEDED);*/
