--- a/templates/template.html
+++ b/templates/template.html
@@ -38,7 +38,7 @@
         <div include-html="../templates/navbar.html"></div>
         <div id="container" style="width: 100%;">
             <div include-html="../templates/sidebar.html" id="sidenav" class="sidenav"></div>
-            <div class="content">
+            <div class="content background">
                 <div id="messages"></div>
                 <p>This is test content.</p>
                 <p>This is more content.</p>
