--- a/templates/template.html
+++ b/templates/template.html
@@ -34,11 +34,11 @@
         <script src="../scripts/navbarscripts.js"></script>
     </head>
     
-    <body>
+    <body class="background">
         <div include-html="../templates/navbar.html"></div>
         <div id="container" style="width: 100%;">
             <div include-html="../templates/sidebar.html" id="sidenav" class="sidenav"></div>
-            <div class="content background">
+            <div class="content">
                 <div id="messages"></div>
                 <p>This is test content.</p>
                 <p>This is more content.</p>
