Revamped finding current user
Updated all the Firebase scripts to simplify the init process, and find and store the current user more easily.

--- a/templates/template.html
+++ b/templates/template.html
@@ -20,11 +20,12 @@
         <script src="../scripts/firebasescripts-db.js"></script>
         <script src="../scripts/firebasescripts-auth.js"></script>
         <script>
-            var user;
-            setTimeout(function(){
-                user = getUserJSON(auth.currentUser.uid);
-                console.log(userID);
-            }, 250);
+            auth.onAuthStateChanged(function() {
+                console.log(auth.currentUser);
+                loadCurrentUser(auth.currentUser, null);
+            }, function(error) {
+                console.error(error);
+            });
         </script>
     
         <!-- Import the messager scripts -->
