--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <span style="font-size:30px;cursor:pointer" onclick="toggleNav()">&#9776;</span>            
     <!--Title-->
-    <h1>ClassOverflow</h1>
+    <h1>Class Exchange</h1>
 
     <!--Profile-->
     <input type="image" src="../images/Profile%20Picture%20Placeholder.jpg" alt="Profile" class = "profilepic">
