--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,15 +1,27 @@
+<style>
+    .sidenav div {
+        padding-left: 10%;
+    }
+    
+    .element {
+        padding: 0px;
+        display: block;
+    }
+</style>
 <h1>DMs</h1>
-    <div id = "dms" class = "element">Craig</div>
-    <div id = "dms" class = "element">Andrew</div>
+    <div id="userDMs"></div>
 <h1>Classes</h1>
-    <div id = "classes" class = "element">Chemistry</div>
-    <div id = "classes" class = "element">Physics</div>
+    <div id="userClasses"></div>
 <h1>Topics</h1>
-    <div id = "global" class = "element">Computer Science</div>
+    <div>
+        <a href="topics.html" class="element">All Topics</a>
+        <div id="userTopics"></div>
+    </div>
 <h1>Account</h1>
-    <div id = "global" class = "element">Account</div>
-    <div id = "global" class = "element">Sign out</div>
+    <div id="userAccounts"></div>
 <h1>About</h1>
-    <div id = "global" class = "element">About</div>
-    <div id = "global" class = "element">Privacy Policy</div>
-    <div id = "global" class = "element">Terms of Service</div>
+    <div>
+        <a href="../about.html" class="element">About</a>
+        <a href="../privacy.html" class="element">Privacy Policy</a>
+        <a href="../terms.html"class="element">Terms of Service</a>
+    </div>
