--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <span style="font-size:30px;cursor:pointer" onclick="toggleNav()">&#9776;</span>            
     <!--Title-->
-    <h1>Class Exchange</h1>
+    <img src="../images/classExchangeBanner.png" style="height: 60px;" alt="Class Overflow"/>
 
     <!--Profile-->
     <input id="navProfilePicture" type="image" src="../images/Profile%20Picture%20Placeholder.jpg" alt="Profile" class = "profilepic">
