--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -88,6 +88,8 @@ body {
     border-radius: 15px;
     width: 95%; 
     margin-left: 2.5%;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 /*.linkBox {
